# dex-zksnarks

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  decodeOrderBitwise.code  docker-compose.yml  docker_push_master.sh  docker_push_stress.sh  isPartialOrder.code  package-lock.json  package.json  ringtrade_example.code  ringtrade_example_bitwise.code
ZoKrates/: Dockerfile  README.md  decodeOrder.code  emptyOrder.code  limitLessThanPrice.code  package-lock.json  popLeastSignificantBit.code  ringtrade_example.code
ZoKrates/codegen/: generate.js
ZoKrates/examples/: invalid200orders.json
ZoKrates/test/: popLeastSignificantBit.test  ringtrade.test  run_tests.sh  run_util_tests.sh
ZoKrates/util/: encode.py
bellman/: Cargo.toml  Dockerfile
bellman/src/: main.rs
codegen/: generate.js
codegen/templates/: verify_constraints.ejs  verify_constraints_bitwise_order_encoding.ejs
examples/: ringtrade.json
pepper/: Dockerfile  Makefile  README.md
pepper/apps/: dexBenchmark.c  dex_common.h  hash_transform.c  hash_transform.h  hashing.h  macros.h  parsing.h  trade_execution.c  trade_execution.h
pepper/exo_compute/: decompose_bits.py  price_finder_output_conversion.cpp  private_input.py  private_input_trade_execution.cpp
pyscripts/: __init__.py
pyscripts/r1cs/: utils.py
test/: decodeOrder.test  decodeOrderBitwise.test  isPartialOrder.test  limitLessThanPrice.test  popLeastSignificantBit.test  ringtrade.test  ringtradeBitwise.test  ringtrade_counterexamples.sh  run_tests.sh  run_util_tests.sh  testRingtrade.js
util/: generate_input.py  verify.py
(+58 files in other folders)
